feat(tutorial): complete step 5

--- a/src/index.html
+++ b/src/index.html
@@ -68,18 +68,18 @@
         <div class="bx--row">
           <div class="bx--col-lg-8 bx--offset-lg-4 bx--no-gutter">
             <dds-leadspace-with-search adjacent-theme="g90-and-g100">
-              <dds-leadspace-with-search-heading>Find analytics services</dds-leadspace-with-search-heading>
-              <dds-leadspace-with-search-content>
-                <dds-leadspace-with-search-content-heading
-                >Make fast and accurate data-based
-                  decisions
-                </dds-leadspace-with-search-content-heading
+              <dds-leadspace-block-heading slot="heading"
+                >Find analytics services</dds-leadspace-block-heading
+              >
+              <dds-leadspace-block-content slot="content">
+                <dds-leadspace-search-block-heading
+                  >Make fast and accurate data-based
+                  decisions</dds-leadspace-search-block-heading
                 >
-              </dds-leadspace-with-search-content>
+              </dds-leadspace-block-content>
               <dds-search-with-typeahead
-                      slot="search"
-                      searchPlaceholder="Search for an IBM analytics service..."
-                      leadspace-search></dds-search-with-typeahead>
+                slot="search"
+                leadspace-search></dds-search-with-typeahead>
             </dds-leadspace-with-search>
           </div>
         </div>
@@ -150,7 +150,7 @@
           <dds-content-block>
             <dds-content-block-heading>Customer story: Emory University Hospital</dds-content-block-heading>
             <dds-video-cta-container>
-              <dds-card-in-card video-name="Gaining life saving insight 95% faster in the ICU" href="0_3v0uyp0b" cta-type="video" thumbnail="./assets/images/client-story-card-in-card.jpg">
+              <dds-card-in-card video-name="Gaining life saving insight 95% faster in the ICU" href="0_3v0uyp0b" cta-type="video">
                 <dds-card-eyebrow>Emory University Hospital</dds-card-eyebrow>
                 <dds-card-cta-footer cta-type="video" href="0_3v0uyp0b"></dds-card-cta-footer>
               </dds-card-in-card>
