feat(tutorial): complete step 1

--- a/src/index.html
+++ b/src/index.html
@@ -68,10 +68,10 @@
 </head>
 
 <body>
-  <dds-button-group>
+  <!-- <dds-button-group>
     <dds-button-group-item href="https://example.com">Lorem</dds-button-group-item>
     <dds-button-group-item href="https://example.com">Ipsum</dds-button-group-item>
-  </dds-button-group>
+  </dds-button-group> -->
 
   <dds-dotcom-shell-container>
     <main>Hello, World!</main>
