--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,6 @@
 <html>
   <head>
     <script>
-      src = '//1.www.s81c.com/common/stats/ibm-common.js';
-      type = 'text/javascript';
-      async = 'async';
-
       window.digitalData = {
         page: {
           category: {
@@ -43,11 +39,21 @@
         digitalData.page.pageInfo.language = currentLang;
         digitalData.page.pageInfo.ibm.country = params.get('cc').toUpperCase();
       }
+
+      src = '//1.www.s81c.com/common/stats/ibm-common.js';
+      type = 'text/javascript';
+      async = 'async';
     </script>
     <link rel="alternate" hreflang="en-us" href="./index.html?cc=us&lc=en" />
     <link rel="alternate" hreflang="fr-ca" href="./index.html?cc=ca&lc=fr" />
     <link rel="alternate" hreflang="ko-kr" href="./index.html?cc=kr&lc=ko" />
     <link rel="alternate" hreflang="ja-jp" href="./index.html?cc=jp&lc=ja" />
+    <meta charset="UTF-8" />
+    <link rel="icon" href="//www.ibm.com/favicon.ico" />
+    <meta name="dcterms.date" content="2022-06-06" />
+    <meta name="dcterms.rights" content="© Copyright IBM Corp. 2021" />
+    <meta name="geo.country" content="US" />
+    <meta name="robots" content="index,follow" />
     <meta http-equiv="Content-Language" content="en" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Carbon for IBM.com Tutorial</title>
@@ -55,15 +61,6 @@
     <meta
       name="description"
       content="This is an example page for the Carbon for IBM.com Tutorial" />
-    <meta charset="UTF-8" />
-
-    <link rel="icon" href="//www.ibm.com/favicon.ico" />
-
-    <meta name="dcterms.date" content="YYYY-MM-DD" />
-    06-jun-2022
-    <meta name="dcterms.rights" content="© Copyright IBM Corp. 2021" />
-    <meta name="geo.country" content="US" />
-    <meta name="robots" content="index,follow" />
   </head>
 
   <body>
