feat(tutorial): complete step 1

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script>
+    <script
+      src="//1.www.s81c.com/common/stats/ibm-common.js"
+      type="text/javascript"
+      async="async">
       window.digitalData = {
         page: {
           category: {
@@ -39,10 +42,6 @@
         digitalData.page.pageInfo.language = currentLang;
         digitalData.page.pageInfo.ibm.country = params.get('cc').toUpperCase();
       }
-
-      src = '//1.www.s81c.com/common/stats/ibm-common.js';
-      type = 'text/javascript';
-      async = 'async';
     </script>
     <link rel="alternate" hreflang="en-us" href="./index.html?cc=us&lc=en" />
     <link rel="alternate" hreflang="fr-ca" href="./index.html?cc=ca&lc=fr" />
