feat(tutorial): complete step 3

--- a/src/index.html
+++ b/src/index.html
@@ -241,7 +241,43 @@
             <dds-content-group-heading>IBM Analytics Engine features</dds-content-group-heading>
             <dds-content-group-copy>A single Hadoop and Spark service providing an environment to develop and deploy
               advanced analytics applications in minutes.</dds-content-group-copy>
-            <!-- content-group children -->
+              <dds-card-group>
+                <dds-card-group-item cta-type='local' href='https://example.com'>
+                  <dds-image slot="image" alt="Image alt text" default-src="./assets/images/analytics-services-card1.png"></dds-image>
+                  <dds-card-eyebrow>Apache Spark and Hadoop service</dds-card-eyebrow>
+                  <dds-card-heading>IBM® Analytics Engine</dds-card-heading>
+                  <dds-card-cta-footer cta-type='local'>
+                  </dds-card-cta-footer>
+                </dds-card-group-item>
+                <dds-card-group-item cta-type='local' href='https://example.com'>
+                  <dds-image slot="image" alt="Image alt text" default-src="./assets/images/analytics-services-card2.png"></dds-image>
+                  <dds-card-eyebrow>Cluster computing framework</dds-card-eyebrow>
+                  <dds-card-heading>Apache Spark</dds-card-heading>
+                  <dds-card-cta-footer cta-type='local'>
+                  </dds-card-cta-footer>
+                </dds-card-group-item>
+                <dds-card-group-item cta-type='local' href='https://example.com'>
+                  <dds-image slot="image" alt="Image alt text" default-src="./assets/images/analytics-services-card3.png"></dds-image>
+                  <dds-card-eyebrow>IBM Cloud</dds-card-eyebrow>
+                  <dds-card-heading>IBM Information Server on Cloud®</dds-card-heading>
+                  <dds-card-cta-footer cta-type='local'>
+                  </dds-card-cta-footer>
+                </dds-card-group-item>
+                <dds-card-group-item cta-type='local' href='https://example.com'>
+                  <dds-image slot="image" alt="Image alt text" default-src="./assets/images/analytics-services-card4.png"></dds-image>
+                  <dds-card-eyebrow>Data trust service</dds-card-eyebrow>
+                  <dds-card-heading>IBM® Master Data Management on Cloud</dds-card-heading>
+                  <dds-card-cta-footer cta-type='local'>
+                  </dds-card-cta-footer>
+                </dds-card-group-item>
+                <dds-card-group-item cta-type='local' href='https://example.com'>
+                  <dds-image slot="image" alt="Image alt text" default-src="./assets/images/analytics-services-card5.png"></dds-image>
+                  <dds-card-eyebrow>Data range analysis</dds-card-eyebrow>
+                  <dds-card-heading>IBM® Streaming Analytics</dds-card-heading>
+                  <dds-card-cta-footer cta-type='local'>
+                  </dds-card-cta-footer>
+                </dds-card-group-item>
+              </dds-card-group>
           </dds-content-group>
           <dds-link-list type="default" slot="complementary">
             <dds-link-list-heading>Related products</dds-link-list-heading>
