feat(tutorial): complete step 1

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,11 @@
 <!doctype html>
 <html>
 <head>
+  <meta http-equiv="Content-Language" content="en">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <title>Carbon for IBM.com Tutorial</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="This is an example page for the Carbon for IBM.com Tutorial" />
   <meta charset="UTF-8" />
 
 <link rel="icon" href="//www.ibm.com/favicon.ico" />
