--- a/src/index.html
+++ b/src/index.html
@@ -18,8 +18,9 @@
   <meta name="dcterms.rights" content="© Copyright IBM Corp. 2021" />
   <meta name="geo.country" content="US" />
   <meta name="robots" content="index,follow" />
+  <meta name="dcterms.rights" />
   <script 
-    src="//1.www.s81c.com/common/stats/ibm-common.js"
+    src="1.www.s81c.com/common/stats/ibm-common.js"
     type="text/javascript"
     async="async">
     window.digitalData = {
