--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,11 @@
   <title>Carbon for IBM.com Tutorial</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="This is an example page for the Carbon for IBM.com Tutorial" />
+  <script
+  src="//1.www.s81c.com/common/stats/ibm-common.js"
+  type="text/javascript"
+  async="async"
+></script>
   <link rel="alternate" hreflang="en-us" href="./index.html?cc=us&lc=en" />
   <link rel="alternate" hreflang="fr-ca" href="./index.html?cc=ca&lc=fr" />
   <link rel="alternate" hreflang="ko-kr" href="./index.html?cc=kr&lc=ko" />
@@ -18,10 +23,7 @@
   <meta name="dcterms.rights" content="© Copyright IBM Corp. 2021" />
   <meta name="geo.country" content="US" />
   <meta name="robots" content="index,follow" />
-  <script 
-    src="//1.www.s81c.com/common/stats/ibm-common.js"
-    type="text/javascript"
-    async="async">
+  <script>
     window.digitalData = {
       page: {
         category: {
