--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,6 @@
 <!doctype html>
 <html>
 <head>
-  <meta charset="UTF-8" />
-
-  <link rel="icon" href="//www.ibm.com/favicon.ico" />
-  
-  <meta name="dcterms.date" content="2022-06-19" /> // replace with today's date
-  <meta name="dcterms.rights" content="© Copyright IBM Corp. 2021" />
-  <meta name="geo.country" content="US" />
-  <meta name="robots" content="index,follow" />
   <meta http-equiv="Content-Language" content="en">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <title>Carbon for IBM.com Tutorial</title>
@@ -23,7 +15,7 @@
   <link rel="alternate" hreflang="fr-ca" href="./index.html?cc=ca&lc=fr" />
   <link rel="alternate" hreflang="ko-kr" href="./index.html?cc=kr&lc=ko" />
   <link rel="alternate" hreflang="ja-jp" href="./index.html?cc=jp&lc=ja" />
-
+  
   <script>
     window.digitalData = {
       page: {
@@ -60,7 +52,14 @@
       digitalData.page.pageInfo.ibm.country = params.get('cc').toUpperCase();
     }
   </script>
+  <meta charset="UTF-8" />
+
+  <link rel="icon" href="//www.ibm.com/favicon.ico" />
   
+  <meta name="dcterms.date" content="YYYY-MM-DD" /> // replace with today's date
+  <meta name="dcterms.rights" content="© Copyright IBM Corp. 2021" />
+  <meta name="geo.country" content="US" />
+  <meta name="robots" content="index,follow" />
 </head>
 
 <body>
