--- a/src/index.html
+++ b/src/index.html
@@ -12,15 +12,13 @@
   <link rel="alternate" hreflang="ko-kr" href="./index.html?cc=kr&lc=ko" />
   <link rel="alternate" hreflang="ja-jp" href="./index.html?cc=jp&lc=ja" />
   <link rel="icon" href="//www.ibm.com/favicon.ico" />
+  <title>Carbon for IBM.com Tutorial</title>
   <meta charset="UTF-8" />
   <meta http-equiv="Content-Language" content="en">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <title>Carbon for IBM.com Tutorial</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="This is an example page for the Carbon for IBM.com Tutorial" />
-
-
-<meta name="dcterms.date" content="YYYY-MM-DD" /> // replace with today's date
+<meta name="dcterms.date" content="2022-06-19" /> // replace with today's date
 <meta name="dcterms.rights" content="© Copyright IBM Corp. 2021" />
 <meta name="geo.country" content="US" />
 <meta name="robots" content="index,follow" />
