feat(tutorial): complete step 4

--- a/src/index.html
+++ b/src/index.html
@@ -475,7 +475,7 @@
                         <bx-table-cell>80</bx-table-cell>
                         <bx-table-cell>Round Robin</bx-table-cell>
                         <bx-table-cell>Maureen's VM Groups</bx-table-cell>
-                        <bx-table-cell>Active</bx-table-cell>
+                        <bx-table-cell>Inactive</bx-table-cell>
                       </bx-table-row>   
                     </bx-table-body>
                   </bx-table>
