feat(tutorial): complete step 1

--- a/src/index.html
+++ b/src/index.html
@@ -2,14 +2,21 @@
 <html>
 
 <head>
+  <script
+  src="//1.www.s81c.com/common/stats/ibm-common.js" 
+  type="text/javascript" async="async">
+ </script>
   <title>Carbon for IBM.com Tutorial</title>
   <meta charset="UTF-8" />
+  <meta http-equiv="Content-Language" content="en">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="This is an example page for the Carbon for IBM.com Tutorial" />
   <link rel="icon" href="//www.ibm.com/favicon.ico" />
-  <meta name="dcterms.date" content="YYYY-MM-DD" /> // replace with today's date
+  <meta name="dcterms.date" content="2022-07-07" /> // replace with today's date
   <meta name="dcterms.rights" content="© Copyright IBM Corp. 2021" />
   <meta name="geo.country" content="US" />
   <meta name="robots" content="index,follow" />
-  <script src="//1.www.s81c.com/common/stats/ibm-common.js" type="text/javascript" async="async"></script>
   <script>
     window.digitalData = {
       page: {
