--- a/src/index.html
+++ b/src/index.html
@@ -1,27 +1,30 @@
 <!doctype html>
 <html>
-
 <head>
-  <script
-  src="//1.www.s81c.com/common/stats/ibm-common.js" 
-  type="text/javascript" async="async">
- </script>
-  <title>Carbon for IBM.com Tutorial</title>
-  <meta charset="UTF-8" />
   <meta http-equiv="Content-Language" content="en">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+  <title>Carbon for IBM.com Tutorial</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="This is an example page for the Carbon for IBM.com Tutorial" />
-  <link rel="icon" href="//www.ibm.com/favicon.ico" />
-  <meta name="dcterms.date" content="2022-07-07" /> // replace with today's date
-  <meta name="dcterms.rights" content="© Copyright IBM Corp. 2021" />
-  <meta name="geo.country" content="US" />
-  <meta name="robots" content="index,follow" />
+  <meta charset="UTF-8">
+
+  <link rel="icon" href="//www.ibm.com/favicon.ico">
+
+  <meta name="dcterms.date" content="1955-11-05">
+  <meta name="dcterms.rights" content="© Copyright IBM Corp. 2021">
+  <meta name="geo.country" content="US">
+  <meta name="robots" content="index,follow">
+
+  <link rel="alternate" hreflang="en-us" href="./index.html?cc=us&lc=en">
+  <link rel="alternate" hreflang="fr-ca" href="./index.html?cc=ca&lc=fr">
+  <link rel="alternate" hreflang="ko-kr" href="./index.html?cc=kr&lc=ko">
+  <link rel="alternate" hreflang="ja-jp" href="./index.html?cc=jp&lc=ja">
+
   <script>
     window.digitalData = {
       page: {
         category: {
-          primaryCategory: '', // e.g. SB03
+          primaryCategory: '' // e.g. SB03
         },
         pageInfo: {
           effectiveDate: '', // e.g. 2014-11-19
@@ -38,30 +41,28 @@
             owner: '', // e.g. Some Person/City/IBM
             siteID: '', // e.g. MySiteID
             subject: '', // e.g. SW492
-            type: '', // e.g CT305
-          },
-        },
-      },
+            type: '' // e.g CT305
+          }
+        }
+      }
     };
+
     var params = new URLSearchParams(window.location.search);
 
-    if (params.has('lc') && params.has('cc')) {
+    if(params.has('lc') && params.has('cc')) {
       var currentLang = params.get('lc') + '-' + params.get('cc').toUpperCase();
       document.getElementsByTagName("html")[0].setAttribute("lang", currentLang);
       digitalData.page.pageInfo.language = currentLang;
       digitalData.page.pageInfo.ibm.country = params.get('cc').toUpperCase();
     }
   </script>
-  <link rel="alternate" hreflang="en-us" href="./index.html?cc=us&lc=en" />
-  <link rel="alternate" hreflang="fr-ca" href="./index.html?cc=ca&lc=fr" />
-  <link rel="alternate" hreflang="ko-kr" href="./index.html?cc=kr&lc=ko" />
-  <link rel="alternate" hreflang="ja-jp" href="./index.html?cc=jp&lc=ja" />
+
+  <script src="//1.www.s81c.com/common/stats/ibm-common.js" type="text/javascript" async="async"></script>
 </head>
 
 <body>
-  <dds-dotcom-shell-container>
-    <main>Hello World!</main>
-  </dds-dotcom-shell-container>
+<dds-dotcom-shell-container>
+  <main>Hello World!</main>
+</dds-dotcom-shell-container>
 </body>
-
 </html>
