--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,67 @@
 <!doctype html>
 <html>
+
 <head>
   <meta http-equiv="Content-Language" content="en">
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title>Carbon for IBM.com Tutorial</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="This is an example page for the Carbon for IBM.com Tutorial" />
+  <meta charset="UTF-8" />
+  <meta name="dcterms.date" content="YYYY-MM-DD" /> // replace with today's date
+  <meta name="dcterms.rights" content="© Copyright IBM Corp. 2021" />
+  <meta name="geo.country" content="US" />
+  <meta name="robots" content="index,follow" />
+
+  <link rel="icon" href="//www.ibm.com/favicon.ico" />
+  <link rel="alternate" hreflang="en-us" href="./index.html?cc=us&lc=en" />
+  <link rel="alternate" hreflang="fr-ca" href="./index.html?cc=ca&lc=fr" />
+  <link rel="alternate" hreflang="ko-kr" href="./index.html?cc=kr&lc=ko" />
+  <link rel="alternate" hreflang="ja-jp" href="./index.html?cc=jp&lc=ja" />
+
+  <script>
+    window.digitalData = {
+      page: {
+        category: {
+          primaryCategory: '', 
+        },
+        pageInfo: {
+          effectiveDate: '', 
+          expiryDate: '', 
+          language: 'en-US',
+          publishDate: '', 
+          publisher: '', 
+          version: 'Carbon for IBM.com',
+          ibm: {
+            contentDelivery: '', 
+            contentProducer: '', 
+            country: 'US',
+            industry: '', 
+            owner: '', 
+            siteID: '', 
+            subject: '', 
+            type: '', 
+          },
+        },
+      },
+    };
+    var params = new URLSearchParams(window.location.search);
+
+    if (params.has('lc') && params.has('cc')) {
+      var currentLang = params.get('lc') + '-' + params.get('cc').toUpperCase();
+      document.getElementsByTagName("html")[0].setAttribute("lang", currentLang);
+      digitalData.page.pageInfo.language = currentLang;
+      digitalData.page.pageInfo.ibm.country = params.get('cc').toUpperCase();
+    }
+  </script>
+  <script src="//1.www.s81c.com/common/stats/ibm-common.js" type="text/javascript" async="async"></script>
+
 </head>
 
 <body>
-Hello Carbon for IBM.com! Well, not quite yet. This is the starting point for the Carbon for IBM.com tutorial.
+  <dds-dotcom-shell-container>
+    <main>Hello World!</main>
+  </dds-dotcom-shell-container>
 </body>
+
 </html>
