--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
 
   <link rel="icon" href="//www.ibm.com/favicon.ico" />
 
-  <meta name="dcterms.date" content="YYYY-MM-DD" /> // replace with today's date
+  <meta name="dcterms.date" content="YYYY-MM-DD" /> <!--  replace with today's date -->
   <meta name="dcterms.rights" content="© Copyright IBM Corp. 2021" />
   <meta name="geo.country" content="US" />
   <meta name="robots" content="index,follow" />
